--- a/css/style.css
+++ b/css/style.css
@@ -247,6 +247,8 @@ button {
     height: 20px;
     flex-direction: column;
     justify-content: space-between;
+    position: relative;
+    z-index: 1002;
 }
 
 .hamburger span {
